--- a/Food Delivery App/client/src/FoodItem/FoodItem.css
+++ b/Food Delivery App/client/src/FoodItem/FoodItem.css
@@ -7,13 +7,6 @@
     
 }
 
-.food-item-img {
-    margin: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    
-}
 
 .image {
     
@@ -45,4 +38,31 @@
 .food-price {
     font-size: 2vw;
     color: rgb(255, 8, 8);
+}
+
+.food-item-img {
+    position: relative;
+}
+
+.food-item-img .add{
+    width: 40px;
+    position: absolute;
+    bottom: 5%;
+    left: 45%;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.food-item-counter{
+    width: 60px;
+    display: flex;
+    position: absolute;
+    bottom: 5%;
+    left: 40%;
+    align-items: center;
+    gap: 10px;
+    padding: 6px;
+    border-radius: 50px;
+    background-color:rgb(25, 241, 46);
+    box-sizing: border-box;
 }
