--- a/Food Delivery App/client/src/components/Login/Login.css
+++ b/Food Delivery App/client/src/components/Login/Login.css
@@ -1,11 +1,20 @@
 .login{
+    padding: 10px;
     position: absolute;
-    z-index: 3;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
     display: grid;
-}
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    animation: fadein 0.5s;
+} 
 .login-container{
-    width: max(23vw,330px);
-    background-color: white;
+    width: max(28vw,330px);
+    background-color: rgb(162, 245, 61);
     display: flex;
     flex-direction: column;
     gap: 25px;
@@ -15,9 +24,15 @@
 }
 .login-title{
     color: rgb(255, 38, 0);
+    background-color: rgb(162, 245, 61);
     display: flex;
+    padding: 5px;
     justify-content: space-between;
 
+}
+
+.divv,.h22,.pp{
+    background-color: rgb(162, 245, 61);
 }
 .close{
     color: red;
@@ -25,10 +40,12 @@
     cursor: pointer;
     border: 3px solid red;
     border-radius: 25%;
+    padding:0px 10px;
 }
 .login-details{
     display: flex;
     flex-direction: column;
+    background-color: rgb(162, 245, 61);
     gap: 20px;
 }
 .login-details input{
@@ -43,10 +60,12 @@
     padding: 10px;
     border-radius: 5%;
     cursor: pointer;
+    font-size: larger;
 }
 .conditions{
     display: flex;
     gap: 10px;
+    background-color: rgb(162, 245, 61);
     align-items: center;
     margin-top:  -15px ;
 }
@@ -54,4 +73,5 @@ span{
     color: blue;
     font-weight: 500;
     cursor: pointer;
+    background-color: cyan;
 }
