--- a/Food Delivery App/client/src/components/Footer/Footer.css
+++ b/Food Delivery App/client/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
-.footer{
-    color:red;
+.footer {
+    color: red;
     background-color: rgb(58, 250, 192);
     display: flex;
     flex-direction: column;
@@ -9,22 +9,25 @@
     padding-top: 80px;
 }
 
-.footer-content{
+.footer-content {
     width: 100%;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
     gap: 80px;
 }
 
-.footer-left ,.footer-center, .footer-right{
+.footer-left,
+.footer-center,
+.footer-right {
     display: flex;
     flex-direction: column;
     align-items: start;
     gap: 20px;
 }
 
-.footer-left li , .footer-center li,.footer-right li{
+.footer-left li,
+.footer-center li,
+.footer-right li {
     list-style: none;
     margin-bottom: 10px;
 }
-
