--- a/Food Delivery App/client/src/components/Login/Login.css
+++ b/Food Delivery App/client/src/components/Login/Login.css
@@ -1,4 +1,4 @@
-.login{
+.login {
     padding: 10px;
     position: absolute;
     justify-content: center;
@@ -11,9 +11,10 @@
     top: 0;
     background-color: rgba(0, 0, 0, 0.5);
     animation: fadein 0.5s;
-} 
-.login-container{
-    width: max(28vw,330px);
+}
+
+.login-container {
+    width: max(28vw, 330px);
     background-color: rgb(162, 245, 61);
     display: flex;
     flex-direction: column;
@@ -22,7 +23,8 @@
     font-size: 20px;
     animation: fadein 0.9s;
 }
-.login-title{
+
+.login-title {
     color: rgb(255, 38, 0);
     background-color: rgb(162, 245, 61);
     display: flex;
@@ -31,30 +33,36 @@
 
 }
 
-.divv,.h22,.pp{
+.divv,
+.h22,
+.pp {
     background-color: rgb(162, 245, 61);
 }
-.close{
+
+.close {
     color: red;
     right: 10%;
     cursor: pointer;
     border: 3px solid red;
     border-radius: 25%;
-    padding:0px 10px;
+    padding: 0px 10px;
 }
-.login-details{
+
+.login-details {
     display: flex;
     flex-direction: column;
     background-color: rgb(162, 245, 61);
     gap: 20px;
 }
-.login-details input{
-    padding: 10px ;
+
+.login-details input {
+    padding: 10px;
     border: 2px solid rgb(143, 244, 96);
     outline: none;
     border-radius: 6px;
 }
-.login-container .butt{
+
+.login-container .butt {
     background-color: rgb(0, 255, 17);
     color: rgb(255, 8, 0);
     padding: 10px;
@@ -62,14 +70,16 @@
     cursor: pointer;
     font-size: larger;
 }
-.conditions{
+
+.conditions {
     display: flex;
     gap: 10px;
     background-color: rgb(162, 245, 61);
     align-items: center;
-    margin-top:  -15px ;
+    margin-top: -15px;
 }
-span{
+
+span {
     color: blue;
     font-weight: 500;
     cursor: pointer;
