--- a/Food Delivery App/client/src/components/Footer/Footer.css
+++ b/Food Delivery App/client/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-    color: red;
-    background-color: rgb(58, 250, 192);
+    color: rgb(18, 13, 18);
+    background-image: linear-gradient(rgb(254, 78, 78), yellow,rgb(55, 250, 55), rgb(56, 56, 247));
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,16 +9,22 @@
     padding-top: 80px;
 }
 
+.footer *{
+    background-color: rgba(0,0,0,0);
+}
+
 .footer-content {
     width: 100%;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
+    animation: fadein 0.5s;
     gap: 80px;
 }
 
 .footer-left,
 .footer-center,
 .footer-right {
+    
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -30,4 +36,9 @@
 .footer-right li {
     list-style: none;
     margin-bottom: 10px;
+} 
+
+.social-icons{
+    display: flex;
+    gap: 10px;
 }
