--- a/Food Delivery App/client/src/components/ExploreMenu/ExploreMenu.css
+++ b/Food Delivery App/client/src/components/ExploreMenu/ExploreMenu.css
@@ -11,7 +11,7 @@
 }
 
 .explore-menu-text {
-    max-width: 60%;
+    max-width: 80%;
     font-size: 2vw;
 }
 
@@ -57,6 +57,14 @@
     display: none;
 }
 
-@media (max-width:1050px) {
-    
+@media (max-width:900px) {
+    .explore-menu h1{
+        font-size:xx-large;
+    }
+    .explore-menu-text{
+        font-size: larger;
+    }
+    .explore-menu-list p{
+        font-size: larger;
+    }
 }
