--- a/Food Delivery App/client/src/components/Fooddisplay/Fooddisplay.css
+++ b/Food Delivery App/client/src/components/Fooddisplay/Fooddisplay.css
@@ -15,3 +15,9 @@
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 10px;
 }
+
+@media (max-width:900px) {
+    .food-display h1{
+        font-size: xx-large;
+    }
+}
