--- a/Food Delivery App/client/src/components/Footer/Footer.css
+++ b/Food Delivery App/client/src/components/Footer/Footer.css
@@ -42,3 +42,10 @@
     display: flex;
     gap: 10px;
 }
+
+@media (max-width:900px) {
+    .footer-content{
+        display: flex;
+        flex-direction: column;
+    }
+}
