--- a/Food Delivery App/client/src/FoodItem/FoodItem.css
+++ b/Food Delivery App/client/src/FoodItem/FoodItem.css
@@ -4,8 +4,7 @@
     animation: fadein 1s;
     width: 100%;
     border: 2px solid yellow;
-    margin: 3%;
-    
+    margin: 3% 0;
 }
 
 
@@ -73,7 +72,10 @@
         display: flex;
         flex-direction: column;
     }
-    .food-name,.food-price,.food-description{
-        font-size: larger;
+    .food-description{
+        font-size: x-large;
+    }
+    .food-name,.food-price{
+        font-size: xx-large;
     }
 }
