--- a/Food Delivery App/client/src/components/Login/Login.css
+++ b/Food Delivery App/client/src/components/Login/Login.css
@@ -85,3 +85,43 @@ span {
     cursor: pointer;
     background-color: cyan;
 }
+
+@media screen and (max-width:900px) {
+    .login {
+        padding: 10px;
+        position: absolute;
+        justify-content: center;
+        align-items: center;
+        z-index: 2;
+        display: grid;
+        width: 100vw;
+        height: 100vh;
+        left: 0;
+        top: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        animation: fadein 0.6s;
+    }
+
+    .login-container {
+        width: max(90vw, 330px);
+        background-color: rgb(162, 245, 61);
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        padding: 5% 3%;
+        font-size: 20px;
+        animation: fadein 0.9s;
+    }
+
+    .login-container .h22,.login-container .close{
+        font-size: xx-large;
+    }
+
+    .login-details input,.conditions  p,.divv{
+        font-size: xx-large;
+    }
+
+    .butt{
+        font-size: 16px;
+    }
+}
